syntax = "proto3";

package prime;

message PrimeNumberDecompositionRequest {
	int32 num = 1;
} 

message PrimeNumberDecompositionResponse {
	int32 result = 1;
}

service PrimeNumberDecompositionService {
	// server streaming
	rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
}